--- a/flights.html
+++ b/flights.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-zinc-800">
+  <body class="color">
     <div class="text-white w-[900px] h-[500px] ml-[100px] mt-[100px]">
       <div class="text-[50px]">
         <h1>Find Flight</h1>
