--- a/home.html
+++ b/home.html
@@ -8,59 +8,69 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-zinc-800">
-    <div class="text-white items-center">
-      <div
-        class="sidebar fixed top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-700"
-      >
-        <div
-          class="p-2.5 mt-3 flex items-center rounded-md mt-[100px] px-4 duration-300 cursor-pointer"
-        >
-          <a href="flights.html">
-            <span
-              class="text-[15px] ml-4 text-gray-200 font-medium text-base hover:text-blue-400"
-              >Flights</span
-            >
-          </a>
-        </div>
-        <div
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer"
-        >
-          <span
-            class="text-[15px] ml-4 text-gray-200 font-medium text-base hover:text-blue-400"
-            >Iternary</span
-          >
-        </div>
-        <div
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer"
-        >
-          <div class="flex justify-between w-full items-center">
-            <span
-              class="text-[15px] ml-4 text-gray-200 font-medium text-base hover:text-blue-400"
-              >Home</span
-            >
-          </div>
-        </div>
+  <body>
+    <div class="color w-100 h-[100px] flex justify-items-center items-center">
+      <img
+        src="assests/hp.png"
+        alt="hp-load-runner"
+        class="py-[16px] ml-[30px]"
+        width="100"
+      />
+      <h1 class="text-white text-lg">Web Tours</h1>
+    </div>
 
-        <div
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer"
-        >
-          <a href="/login.html">
-            <span
-              class="text-[15px] ml-4 text-gray-200 font-medium text-base hover:text-blue-500"
-              >Logout</span
+    <!-- sidebar main content -->
+    <div class="flex">
+      <div class="bg-gray-300 mt-[5px] w-[300px] h-screen">
+        <div class="flex flex-col mt-[100px]">
+          <a href="/flightss.html">
+            <button
+              class="bg-white rounded-md p-1 ml-[10px] w-[200px] mt-[13px] hover:bg-gray-100"
             >
+              Flights
+            </button>
+          </a>
+          <a href="">
+            <button
+              class="bg-white rounded-md p-1 ml-[10px] w-[200px] mt-[13px] hover:bg-gray-100"
+            >
+              Iternary
+            </button>
+          </a>
+          <a href="home.html">
+            <button
+              class="bg-white rounded-md p-1 ml-[10px] w-[200px] mt-[13px] hover:bg-gray-100"
+            >
+              Home
+            </button>
+          </a>
+          <a href="/login.html">
+            <button
+              class="bg-white rounded-md p-1 ml-[10px] w-[200px] mt-[13px] hover:bg-gray-100"
+            >
+              Sign Off
+            </button>
           </a>
         </div>
       </div>
-    </div>
-    <!-- Content .... -->
-    <div class="ml-[500px] mt-[200px] w-[900px] text-white text-[20px]">
-      <p class="">
-        Welcome, Jojo, to the Web Tours reservation pages. Using the menu on the
-        left, you can search for new flights to book, or review/edit the flights
-        already booked. Don't forget to sign off when you're done.
-      </p>
+      <!-- main content -->
+      <div class="w-[1500px] bg-gray-300 ml-[5px] mt-[5px]">
+        <div class="flex flex-col mt-[153px] ml-[100px]">
+          <div class="text-color-all mt-[50px] height-text text-md">
+            <p>
+              Welcome,
+              <span class="font-bold">Jojo </span>
+              to the Web Tours reservation pages.
+            </p>
+            <p>
+              Using the menu to the left, you can search for new flights to
+              book, or review/edit the flights already booked. Don't forget
+              <br />
+              to sign off when you're done!
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
