--- a/login.html
+++ b/login.html
@@ -9,48 +9,62 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="w-[600px] h-[900px] items-center ml-[400px] pt-[100px]">
-      <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col">
-        <div class="mb-4">
-          <label
-            class="block text-gray-800 text-sm font-medium mb-2"
-            for="username"
-          >
-            Username
-          </label>
-          <input
-            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-800"
-            id="username"
-            type="text"
-            name="username"
-            placeholder="Enter Username"
-          />
-        </div>
-        <div class="mb-6">
-          <label
-            class="block text-gray-600 text-sm font-medium mb-2"
-            for="password"
-          >
-            Password
-          </label>
-          <input
-            class="shadow appearance-none border border-red rounded w-full py-2 px-3 text-gray-800 mb-3"
-            id="password"
-            type="password"
-            name="password"
-            placeholder="Enter Password"
-          />
-        </div>
+    <div class="color w-100 h-[100px] flex justify-items-center items-center">
+      <img
+        src="assests/hp.png"
+        alt="hp-load-runner"
+        class="py-[16px] ml-[30px]"
+        width="100"
+      />
+      <h1 class="text-white text-lg">Web Tours</h1>
+    </div>
 
-        <div class="flex items-center justify-between">
-          <a href="/home.html">
-            <button
-              class="bg-blue-500 hover:bg-blue-dark text-white font-normal py-2 px-4 rounded text-gray-800"
-              type="button"
-            >
-              Login
-            </button>
-          </a>
+    <!-- sidebar main content -->
+    <div class="flex">
+      <div class="bg-gray-300 mt-[5px] w-[300px] h-screen">
+        <form action="/home.html">
+          <div class="flex flex-col ml-[10px]">
+            <label class="text-lg ml-[15px] mt-[100px]">Username </label>
+            <input
+              type="text"
+              class="ml-2 p-1 border-current rounded-md text-sm w-[200px]"
+            />
+          </div>
+          <div class="flex flex-col mt-[20px] ml-[10px]">
+            <label class="text-lg ml-[15px]">Password </label>
+            <input
+              type="password"
+              class="ml-2 p-1 border-current rounded-md text-sm w-[200px]"
+            />
+          </div>
+
+          <button
+            class="bg-white rounded-md p-1 ml-[20px] w-[100px] mt-[13px] hover:bg-gray-100"
+          >
+            Login
+          </button>
+        </form>
+      </div>
+      <!-- main content -->
+      <div class="w-[1500px] bg-gray-300 ml-[5px] mt-[5px]">
+        <div class="flex flex-col mt-[153px] ml-[100px]">
+          <h1 class="text-4xl text-color-all">Web Tours</h1>
+          <div class="text-color-all mt-[50px] height-text text-md">
+            <p>Welcome to the Web Tours site.</p>
+            <p>
+              To make reservation, please enter your account information to the
+              left.
+            </p>
+            <p>
+              If you haven't registered yet,
+              <span class="font-bold">sign up now</span> to get access to all
+              our resources
+            </p>
+            <p>
+              To configure the server options, use
+              <span class="font-bold">administration</span> link.
+            </p>
+          </div>
         </div>
       </div>
     </div>
